--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "http-server": "^14.1.1",
     "react-scripts": "^5.0.1"
   }
 }
